5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1585_1017.log
== TEST (2019-03-22 19:56:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 km 
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

from math import arcos
from math import sen
from math import cos
d = R * arcos * (sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1 - g2))	
print(round(d, 2))
-- ERROR:
File "XXXX", line 4
    R = 6371.01 km 
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:56:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

from math import arcos
from math import sen
from math import cos
d = R * arcos * (sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1 - g2))	
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:57:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
from math import radians
from math import acos
from math import sin
from math import cos
d = R * acos * (sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))	
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:57:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

from math import acos
from math import sin
from math import cos
d = R * acos * (sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))	
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    d = R * acos * (sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))	
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:58:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

from math import acos
from math import sin
from math import cos
d = float(R * acos * (sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))	
print(round(d, 2))
-- ERROR:
File "XXXX", line 15
    print(round(d, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:02:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

from math import acos
from math import sin
from math import cos

d = float(R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))

print (round(d, 2))
 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    d = float(R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:04:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

from math import acos
from math import sin
from math import cos

d = float(R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))

print (round(d, 2))
 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    d = float(R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:56:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

from math import acos
from math import sin
from math import cos

d = (R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
R* acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
print (round(d, 2))
 


-- ERROR:
File "XXXX", line 16
    R* acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
                                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:56:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

from math import acos
from math import sin
from math import cos

d = (R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))

print (round(d, 2))
 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    d = (R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:57:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

from math import acos
from math import sin
from math import cos

d = float(R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))

print (round(d, 2))
 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    d = float(R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:58:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

from math import acos
from math import sin
from math import cos

d = float("R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)")

print (round(d, 2))
 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    d = float("R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)")
ValueError: could not convert string to float: 'R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:58:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

from math import acos
from math import sin
from math import cos

d = ("R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)")

print (round(d, 2))
 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print (round(d, 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:59:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

from math import acos
from math import sin
from math import cos

d = ("R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)")

print (round(d, 2))
 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print (round(d, 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:00:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

from math import acos
from math import sin
from math import cos

d = ("R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)")

print(round(d, 2))
 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(round(d, 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:00:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

from math import acos
from math import sin
from math import cos

d = ("R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)")

print(round(d, 2))
 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(round(d, 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:00:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

from math import acos
from math import sin
from math import cos

d = ("R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)")

print(round(d, 2))
 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(round(d, 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:02:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

from math import acos
from math import sin
from math import cos

d = ("R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)")
ang = radians(float(input("Angulo: "))) 
	
print(round(d, 2))
 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    ang = radians(float(input())) 
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:04:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
ang = radians(float(input("Angulo: "))) 

from math import acos
from math import sin
from math import cos

d = ("R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)")
ang = radians(float(input("Angulo: "))) 
print(round(d, 2))
 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    ang = radians(float(input())) 
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:05:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
ang = radians(float(input("Angulo: "))) 

from math import acos
from math import sin
from math import cos

d = ("R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)")
 
print(round(d, 2))
 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    ang = radians(float(input())) 
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:09:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
ang = radians(float(input("Angulo: "))) 

from math import acos()
from math import sin()
from math import cos()
from math import radians()

d = R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)
 
print(round(d, 2))
 


-- ERROR:
File "XXXX", line 12
    from math import acos()
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:09:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
ang = radians(float(input("Angulo: "))) 

from math import arcos()
from math import sin()
from math import cos()
from math import radians()

d = R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)
 
print(round(d, 2))
 


-- ERROR:
File "XXXX", line 12
    from math import arcos()
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:10:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
ang = radians(float(input("Angulo: "))) 

from math import acos
from math import sin()
from math import cos()
from math import radians()

d = R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)
 
print(round(d, 2))
 


-- ERROR:
File "XXXX", line 13
    from math import sin()
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:10:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
ang = radians(float(input("Angulo: "))) 

from math import acos
from math import sin
from math import cos
from math import radians

d = R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)
 
print(round(d, 2))
 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    ang = radians(float(input())) 
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:11:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
ang = radians(float(input("Angulo: "))) 

from math import acos
from math import sin
from math import cos


d = R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)
 
print(round(d, 2))
 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    ang = radians(float(input())) 
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 12:11:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
ang = radians(float(input("Angulo: "))) 

from math import acos
from math import sin
from math import cos


d = R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)
 
print(round(d, 2))
 


-- EXECUTION TIME:
0.143836
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1017/main.py", line 10, in <module>
    ang = radians(float(input())) 
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 12:12:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

from math import acos
from math import sin
from math import cos


d = R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)
 
print(round(d, 2))
 


-- EXECUTION TIME:
0.124965
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1017/main.py", line 16, in <module>
    d = R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:12:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

from math import acos
from math import sin
from math import cos


d = R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)
 
print(round(d, 2))
 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    d = R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 12:12:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

from math import acos
from math import sin
from math import cos


d = R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)
 
print(round(d, 2))
 


-- EXECUTION TIME:
0.135929
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1017/main.py", line 16, in <module>
    d = R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:25:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

from math import acos
from math import sin
from math import cos


d = R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)
 
print(round(d, 2))
 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    d = R * acos * sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2)
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:26:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

from math import acos
from math import sin
from math import cos

d = R * acos * (sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
 
print(round(d, 2))
 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    d = R * acos * (sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 12:26:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

from math import acos
from math import sin
from math import cos

d = R * acos * (sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
 
print(round(d, 2))
 


-- EXECUTION TIME:
0.186889
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1017/main.py", line 16, in <module>
    d = R * acos * (sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:31:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

from math import acos
from math import sin
from math import cos

d = R * acos * (sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
 
print(round(d, 2))
 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    d = R * acos * (sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:39:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
 
from math import radians
from math import acos
from math import sin
from math import cos

d = R * acos * (sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
 
print(round(d, 2))
 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    d = R * acos * (sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:39:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
 
from math import radians
from math import acos
from math import sin
from math import cos

d = R * acos * (sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
 
print(round(d, 2))
 


-- EXECUTION TIME:
0.200462
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1017/main.py", line 17, in <module>
    d = R * acos * (sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:39:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
 
from math import radians
from math import acos
from math import sin
from math import cos

d = R * acos * (sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
 
print(round(d, 2))
 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    d = R * acos * (sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:39:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
 
from math import radians
from math import acos
from math import sin
from math import cos

d = float(R * acos * (sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
 
print(round(d, 2))
 


-- ERROR:
File "XXXX", line 19
    print(round(d, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:40:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
 
from math import radians
from math import acos
from math import sin
from math import cos

d = int(R * acos * (sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
 
print(round(d, 2))
 


-- ERROR:
File "XXXX", line 19
    print(round(d, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:40:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
 
from math import radians
from math import acos
from math import sin
from math import cos

d = (R * acos * (sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
 
print(round(d, 2))
 


-- ERROR:
File "XXXX", line 19
    print(round(d, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:40:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
 
from math import radians
from math import acos
from math import sin
from math import cos

d = (R * acos * (sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
 
print(round("d, 2"))
 


-- ERROR:
File "XXXX", line 19
    print(round("d, 2"))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:41:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
 
from math import radians
from math import acos
from math import sin
from math import cos

d = (R * acos * (sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
 
print(round(d, 2))
 


-- EXECUTION TIME:
0.171712
-- ERROR:
  File "/home/codebench/codes/1585/1017/main.py", line 19
    print(round(d, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:42:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
 
from math import radians
from math import acos
from math import sin
from math import cos

d = (R * acos * ((sin(t1) * sin(t2)) + (cos (t1) * cos (t2) * cos (g1 - g2)))
 
print(round(d, 2))
 


-- ERROR:
File "XXXX", line 19
    print(round(d, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:43:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
ang = radians(float(input("Angulo: ")))
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
 
from math import radians
from math import acos
from math import sin
from math import cos

d = (R * acos * ((sin(t1) * sin(t2)) + (cos (t1) * cos (t2) * cos (g1 - g2)))
 
print(round(d, 2))
 


-- ERROR:
File "XXXX", line 19
    print(round(d, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:43:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
ang = radians(float(input("Angulo: ")))
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
 
from math import radians
from math import acos
from math import sin
from math import cos

d = (R * acos * ((sin(t1) * sin(t2)) + (cos (t1) * cos (t2) * cos (g1 - g2)))
 
print(round(d, 2))
 


-- ERROR:
File "XXXX", line 19
    print(round(d, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:43:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
ang = radians(float(input("Angulo: ")))
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
 
from math import radians
from math import acos
from math import sin
from math import cos

d = (R * acos * ((sin(t1) * sin(t2)) + (cos (t1) * cos (t2) * cos (g1 - g2)))
 
print(round(d, 2))
 


-- EXECUTION TIME:
0.172697
-- ERROR:
  File "/home/codebench/codes/1585/1017/main.py", line 19
    print(round(d, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:44:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians
ang = radians(float(input("Angulo: ")))
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
 
from math import radians
from math import acos
from math import sin
from math import cos

z = (R * acos * ((sin(t1) * sin(t2)) + (cos (t1) * cos (t2) * cos (g1 - g2)))
 
print(round(z, 2))
 


-- ERROR:
File "XXXX", line 19
    print(round(z, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:45:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
ang = radians(float(input("Angulo: ")))
from math import radians
from math import acos
from math import sin
from math import cos
z = (R * acos * ((sin(t1) * sin(t2)) + (cos (t1) * cos (t2) * cos (g1 - g2)))
print(round(z, 2))
 


-- ERROR:
File "XXXX", line 17
    print(round(z, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:47:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
ang = radians(float(input("Angulo: ")))
from math import radians
from math import arcos
from math import sin
from math import cos
z = (R * arcos * ((sin(t1) * sin(t2)) + (cos (t1) * cos (t2) * cos (g1 - g2)))
print(round(z, 2))
 


-- ERROR:
File "XXXX", line 17
    print(round(z, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:47:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
ang = radians(float(input("Angulo: ")))
from math import radians
from math import acos
from math import sin
from math import cos
z = (R * acos * ((sin(t1) * sin(t2)) + (cos (t1) * cos (t2) * cos (g1 - g2)))
print(z)
 


-- ERROR:
File "XXXX", line 17
    print(z)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:47:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
ang = radians(float(input("Angulo: ")))
from math import radians
from math import acos
from math import sin
from math import cos
z = (R * acos * ((sin(t1) * sin(t2)) + (cos (t1) * cos (t2) * cos (g1 - g2)))
print (z)
 


-- ERROR:
File "XXXX", line 17
    print (z)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:48:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
ang = radians(float(input("Angulo: ")))
from math import radians
from math import acos
from math import sin
from math import cos
z = (R * acos * ((sin(t1) * sin(t2)) + (cos (t1) * cos (t2) * cos (g1 - g2)))
print (float(z))
 


-- ERROR:
File "XXXX", line 17
    print (float(z))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:48:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 
from math import radians

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
ang = radians(float(input("Angulo: ")))
from math import radians
from math import acos
from math import sin
from math import cos
z = (R * acos * ((sin(t1) * sin(t2)) + (cos (t1) * cos (t2) * cos (g1 - g2)))
print(int(z))
 


-- ERROR:
File "XXXX", line 17
    print(int(z))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:49:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
ang = radians(float(input("Angulo: ")))
from math import

z = (R * acos * ((sin(t1) * sin(t2)) + (cos (t1) * cos (t2) * cos (g1 - g2)))
print(round(z,2))
 


-- ERROR:
File "XXXX", line 11
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:49:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
ang = radians(float(input("Angulo: ")))
from math import *

z = (R * acos * ((sin(t1) * sin(t2)) + (cos (t1) * cos (t2) * cos (g1 - g2)))
print(round(z,2))
 


-- ERROR:
File "XXXX", line 14
    print(round(z,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:49:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
ang = radians(float(input("Angulo: ")))
from math import *

z = R * acos ((sin(t1) * sin(t2)) + (cos (t1) * cos (t2) * cos (g1 - g2))
print(round(z,2))
 


-- ERROR:
File "XXXX", line 14
    print(round(z,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:50:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
ang = radians(float(input("Angulo: ")))
from math import *

z = R * acos(sin(t1) * sin(t2)) + (cos (t1) * cos (t2) * cos (g1 - g2))
print(round(z,2))
 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:51:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01 

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

R = 6371.01
from math import *

z = R * acos(sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
print(round(z,2))
 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:51:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

R = 6371.01
from math import *

z = R * acos(sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
print(round(z,2))
 


-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:51:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Longitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

R = 6371.01
from math import *

z = R * acos(sin(t1) * sin(t2) + cos (t1) * cos (t2) * cos (g1 - g2))
print(round(z,2))
 


-- EXECUTION TIME:
0.140991
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:25:45) 
-- CODE:
t1 = float(input(" Digite a latitude t1 de um ponto P1: "))
g1 = float(input(" Digite a longitude g1 de um ponto P1: "))
t2 = float(input(" Digite a latitude t2 de um ponto P2: "))
g2 = float(input(" Digite a longitude g2 de um ponto P2: "))
from math import * 
R = 6371.01   
d = R * acos(sen(t1)* sen(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    d = R * acos(sen(t1)* sen(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
NameError: name 'sen' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:25:46) 
-- CODE:
t1 = float(input(" Digite a latitude t1 de um ponto P1: "))
g1 = float(input(" Digite a longitude g1 de um ponto P1: "))
t2 = float(input(" Digite a latitude t2 de um ponto P2: "))
g2 = float(input(" Digite a longitude g2 de um ponto P2: "))
from math import * 
R = 6371.01   
d = R * acos(sen(t1)* sen(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    d = R * acos(sen(t1)* sen(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
NameError: name 'sen' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:26:57) 
-- CODE:
t1 = float(input(" Digite a latitude t1 de um ponto P1: "))
g1 = float(input(" Digite a longitude g1 de um ponto P1: "))
t2 = float(input(" Digite a latitude t2 de um ponto P2: "))
g2 = float(input(" Digite a longitude g2 de um ponto P2: "))
from math import * 
R = 6371.01   
d = R * acos(sin(t1)* sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(d)
-- OUTPUT:
2884.5016791722005
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:28:02) 
-- CODE:
t1 = float(input(" Digite a latitude t1 de um ponto P1: "))
g1 = float(input(" Digite a longitude g1 de um ponto P1: "))
t2 = float(input(" Digite a latitude t2 de um ponto P2: "))
g2 = float(input(" Digite a longitude g2 de um ponto P2: "))
from math import * 
R = 6371.01   
d = R * acos(sin(t1)* sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d,2))
-- OUTPUT:
2884.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:28:23) 
-- CODE:
t1 = float(input(" Digite a latitude t1 de um ponto P1: "))
g1 = float(input(" Digite a longitude g1 de um ponto P1: "))
t2 = float(input(" Digite a latitude t2 de um ponto P2: "))
g2 = float(input(" Digite a longitude g2 de um ponto P2: "))
from math import * 
R = 6371.01   
d = R * acos(sin(t1)* sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d,2))
-- EXECUTION TIME:
0.230563
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
2884.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:29:26) 
-- CODE:
t1 = float(input(" Digite a latitude t1 de um ponto P1: "))
g1 = float(input(" Digite a longitude g1 de um ponto P1: "))
t2 = float(input(" Digite a latitude t2 de um ponto P2: "))
g2 = float(input(" Digite a longitude g2 de um ponto P2: "))
from math import * 
R = 6371.01   
ang = radians(float(input("Angulo: ")))
d = R * acos(sin(t1)* sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    ang = radians(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:29:42) 
-- CODE:
t1 = float(input(" Digite a latitude t1 de um ponto P1: "))
g1 = float(input(" Digite a longitude g1 de um ponto P1: "))
t2 = float(input(" Digite a latitude t2 de um ponto P2: "))
g2 = float(input(" Digite a longitude g2 de um ponto P2: "))
from math import * 
R = 6371.01   
ang = radians(float(input("Angulo: ")))
d = R * acos(sin(t1)* sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d,2))
-- EXECUTION TIME:
0.157997
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1017/main.py", line 7, in <module>
    ang = radians(float(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:33:01) 
-- CODE:
t1 = float(input(" Digite a latitude t1 de um ponto P1: "))
g1 = float(input(" Digite a longitude g1 de um ponto P1: "))
t2 = float(input(" Digite a latitude t2 de um ponto P2: "))
g2 = float(input(" Digite a longitude g2 de um ponto P2: "))
from math import * 
R = 6371.01   
ang = radians(float(input("Angulo: ")))
d = R * acos(sin(t1)* sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    ang = radians(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:33:35) 
-- CODE:
t1 = float(input(" Digite a latitude t1 de um ponto P1: "))
g1 = float(input(" Digite a longitude g1 de um ponto P1: "))
t2 = float(input(" Digite a latitude t2 de um ponto P2: "))
g2 = float(input(" Digite a longitude g2 de um ponto P2: "))
from math import * 
R = 6371.01   
ang = radians(float(input("Angulo: ")))
d = R * acos(sin(t1)* sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d,2))
-- EXECUTION TIME:
0.150662
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1017/main.py", line 7, in <module>
    ang = radians(float(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:34:06) 
-- CODE:
t1 = float(input(" Digite a latitude t1 de um ponto P1: "))
g1 = float(input(" Digite a longitude g1 de um ponto P1: "))
t2 = float(input(" Digite a latitude t2 de um ponto P2: "))
g2 = float(input(" Digite a longitude g2 de um ponto P2: "))
from math import * 
R = 6371.01   
ang = radians(float("Angulo: "))
d = R * acos(sin(t1)* sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    ang = radians(float("Angulo: "))
ValueError: could not convert string to float: 'Angulo: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:34:45) 
-- CODE:
t1 = float(input(" Digite a latitude t1 de um ponto P1: "))
g1 = float(input(" Digite a longitude g1 de um ponto P1: "))
t2 = float(input(" Digite a latitude t2 de um ponto P2: "))
g2 = float(input(" Digite a longitude g2 de um ponto P2: "))
from math import * 
R = 6371.01   

d = R * acos(sin(t1)* sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d,2))
-- OUTPUT:
2884.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:34:51) 
-- CODE:
t1 = float(input(" Digite a latitude t1 de um ponto P1: "))
g1 = float(input(" Digite a longitude g1 de um ponto P1: "))
t2 = float(input(" Digite a latitude t2 de um ponto P2: "))
g2 = float(input(" Digite a longitude g2 de um ponto P2: "))
from math import * 
R = 6371.01   

d = R * acos(sin(t1)* sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d,2))
-- EXECUTION TIME:
0.159322
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
2884.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:35:45) 
-- CODE:
t1 = float(input(" Digite a latitude t1 de um ponto P1: "))
g1 = float(input(" Digite a longitude g1 de um ponto P1: "))
t2 = float(input(" Digite a latitude t2 de um ponto P2: "))
g2 = float(input(" Digite a longitude g2 de um ponto P2: "))
from math import * 
R = 6371.01   

d = R * acos(sin(t1)* sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d,2))
-- OUTPUT:
2884.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:37:36) 
-- CODE:
t1 = float(input(" Digite a latitude t1 de um ponto P1: "))
g1 = float(input(" Digite a longitude g1 de um ponto P1: "))
t2 = float(input(" Digite a latitude t2 de um ponto P2: "))
g2 = float(input(" Digite a longitude g2 de um ponto P2: "))
from math import * 
R = 6371.01   
ang = radians(float(t1))
ang = radians(float(g1))
ang = radians(float(t2))
ang = radians(float(g2))

d = R * acos(sin(t1)* sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d,2))
-- OUTPUT:
2884.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:37:43) 
-- CODE:
t1 = float(input(" Digite a latitude t1 de um ponto P1: "))
g1 = float(input(" Digite a longitude g1 de um ponto P1: "))
t2 = float(input(" Digite a latitude t2 de um ponto P2: "))
g2 = float(input(" Digite a longitude g2 de um ponto P2: "))
from math import * 
R = 6371.01   
ang = radians(float(t1))
ang = radians(float(g1))
ang = radians(float(t2))
ang = radians(float(g2))

d = R * acos(sin(t1)* sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d,2))
-- EXECUTION TIME:
0.159806
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
2884.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:44:43) 
-- CODE:
t1 = radians(float(input(" Digite a latitude t1 de um ponto P1: ")))
g1 = radians(float(input(" Digite a longitude g1 de um ponto P1: ")))
t2 = radians(float(input(" Digite a latitude t2 de um ponto P2: ")))
g2 = radians(float(input(" Digite a longitude g2 de um ponto P2: ")))
from math import * 
R = 6371.01   

d = R * acos(sin(t1)* sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:45:15) 
-- CODE:
from math import * 
t1 = radians(float(input(" Digite a latitude t1 de um ponto P1: ")))
g1 = radians(float(input(" Digite a longitude g1 de um ponto P1: ")))
t2 = radians(float(input(" Digite a latitude t2 de um ponto P2: ")))
g2 = radians(float(input(" Digite a longitude g2 de um ponto P2: ")))
 
R = 6371.01   

d = R * acos(sin(t1)* sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d,2))
-- EXECUTION TIME:
0.140762
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
